feat: addind command to create super admin and minor fixes
